--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,12 +1,3 @@
-@online{austrianstandardsinternationalONORM7700420192019,
-  title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
-  author = {Austrian Standards International},
-  date = {2019-10-19},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
-}
-
 @misc{BKA_BMI_NIS_Fact_Sheet_9/2022,
   title = {Sicherheitsmaßnahmen Für Betreiber Wesentlicher Dienste 09/2022 ("{{NIS Fact Sheet}} 9/2022")},
   author = {{Bundeskanzleramt und Bundesministerium für Inneres}},
@@ -174,6 +165,15 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
+}
+
+@online{OENORM7700-4,
+  title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
+  author = {Austrian Standards International},
+  date = {2019-10-19},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
 @legislation{RichtlinieEU20162016,
