--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,12 +1,3 @@
-@misc{a-sitOsterreichischesInformationssicherheitshandbuch2023,
-  title = {Österreichisches {{Informationssicherheitshandbuch}}},
-  author = {A-SIT and Bundeskanzleramt},
-  date = {2023-02-23},
-  url = {https://www.sicherheitshandbuch.gv.at/},
-  urldate = {2023-02-27},
-  file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
-}
-
 @misc{BKA_BMI_NIS_Fact_Sheet_9/2022,
   title = {Sicherheitsmaßnahmen Für Betreiber Wesentlicher Dienste 09/2022 ("{{NIS Fact Sheet}} 9/2022")},
   author = {{Bundeskanzleramt und Bundesministerium für Inneres}},
@@ -174,6 +165,15 @@
   author = {Niemann, Karl-Heinz},
   date = {2021},
   institution = {{ABB Automation Products GmbH, Heidelberg}}
+}
+
+@misc{OEISHB,
+  title = {Österreichisches {{Informationssicherheitshandbuch}}},
+  author = {A-SIT and Bundeskanzleramt},
+  date = {2023-02-23},
+  url = {https://www.sicherheitshandbuch.gv.at/},
+  urldate = {2023-02-27},
+  file = {/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
 }
 
 @online{OENORM7700-4,
