--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -161,7 +161,7 @@
 }
 
 @misc{KSOE,
-  title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}},
+  title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023},
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
 }
 
