--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -162,7 +162,7 @@
 
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023},
-  author = {Kompetenzzentrum Sicheres Österreich},
+  author = {Kompetenzzentrum Sicheres Österreich and Cyber Trust Austria},
   file = {/Users/werner/Zotero/storage/HJ2EJ2WY/cyberrisk-2023-schema-de.pdf}
 }
 
