--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -236,6 +236,10 @@
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
 }
 
+@misc{zotero-358,
+  type = {misc}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
