--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -16,6 +16,10 @@
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
 
+@misc{CISCSC_WEB,
+  type = {misc}
+}
+
 @misc{EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
@@ -242,10 +246,6 @@
   isbn = {978-1-72814-362-0},
   langid = {english},
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
-}
-
-@misc{zotero-360,
-  type = {misc}
 }
 
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
