--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -206,6 +206,15 @@
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
+@online{rCyberTrustAustria,
+  title = {Cyber Trust Austria - Kompetenzzentrum Sicheres Österreich},
+  author = {{r}},
+  url = {https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/},
+  urldate = {2023-03-01},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
